# python-arango-ogm

./: .env  .env.test  .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
docs/: index.html  python_arango_ogm.html  search.js
docs/python_arango_ogm/: cli.html  db.html  notebooks.html  utils.html
docs/python_arango_ogm/cli/: pao_migrate.html
docs/python_arango_ogm/db/: migration_builder.html  migration_model.html  model.html  model_discovery.html  pao_database.html  pao_db_base.html  pao_edges.html  pao_fields.html  pao_indexes.html  pao_migration_builder.html  pao_migration_model.html  pao_migrator.html  pao_model.html  pao_model_discovery.html  pao_queries.html  tests.html
docs/python_arango_ogm/db/tests/: database.html  models.html  test_discovery.html  test_migration_builder.html  test_models.html  test_pao_discovery.html  test_pao_migration_builder.html  test_pao_migrator.html  test_pao_models.html
docs/python_arango_ogm/utils/: f_range.html  iter_util.html  logger.html  math_util.html  md_util.html  singleton.html  str_util.html  test_f_range.html  test_math_util.html  test_str_util.html  time_util.html  type_util.html
notebooks/: supernode.ipynb
python_arango_ogm/cli/: pao_migrate.py
python_arango_ogm/db/: migration_builder.py  migration_model.py  migrator.py  model.py  model_discovery.py  pao_database.py  pao_db_base.py  pao_edges.py  pao_fields.py  pao_indexes.py  pao_migration_builder.py  pao_migration_model.py  pao_migrator.py  pao_model.py  pao_model_discovery.py  pao_queries.py
python_arango_ogm/db/tests/: __init__.py  database.py  models.py  test_discovery.py  test_migration_builder.py  test_models.py  test_pao_discovery.py  test_pao_migration_builder.py  test_pao_migrator.py  test_pao_models.py
python_arango_ogm/notebooks/: supernode.ipynb
python_arango_ogm/utils/: f_range.py  iter_util.py  math_util.py  md_util.py  singleton.py  str_util.py  test_f_range.py  test_math_util.py  test_str_util.py  time_util.py  type_util.py
