[tool.poetry]
name = "python-arango-ogm"
version = "0.2.5"
description = "Python-based package implementing an OGM framework for arango; built on top of python-arango."
authors = ["Steven Miers <steven.miers@gmail.com>"]
readme = "README.md"
license = "The Unlicense"
homepage = "https://pypi.org/project/python-arango-ogm/"
repository = "https://github.com/tangledpath/python-arango-ogm"
documentation = "https://tangledpath.github.io/python-arango-ogm"

[tool.poetry.dependencies]
python = "^3.12.2"
python-arango = "^7.9.1"
typer = {extras = ["all"], version = "^0.9.0"}
python-dotenv = "^1.0.1"
lorem-text = "^2.1"
jupyterlab = "^4.1.3"
httpx = "^0.27.0"
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.1.0"
pdoc = "^14.4.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.0.1"
pytest-mock = "*"

[tool.poetry.scripts]
pao-migrate = "python_arango_ogm.cli.pao_migrate:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.autopep8]
max_line_length = 100
ignore = "E501,W6"  # or ["E501", "W6"]
in-place = true
recursive = true
aggressive = 3

#packages = [
#    { include = "python_arango_ogm" }
#]
